# final-project-pomodoro-server

./: .gitignore  README.md  pyproject.toml
pomodoro/: __init__.py  main.py  pomodoro_timer.py
pomodoro/static/css/: style.css
pomodoro/static/js/: timer.js
pomodoro/templates/: about.html  base.html  home.html
src/pomodoro/: __init__.py  buzzer.py  buzzer_tunes.py  get_ip.py  lcd.py  main.py  pomodoro_timer.py
src/pomodoro/static/css/: style.css
src/pomodoro/templates/: about.html  home.html
